added express, knex, squlite3, nodemon and set up index.js for server file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "node-sqlite3-knex",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "repository": "https://github.com/bdurb/node-sqlite3-knex.git",
   "author": "bdurb <brian@rpmgreenville.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.16.3",
+    "knex": "^0.15.2",
+    "nodemon": "^1.18.3",
+    "sqlite3": "^4.0.2"
+  }
 }
